# SDLW

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
example/: example.cpp  second.cpp
include/sdlw/: active_cursor.hpp  assert.hpp  audio.hpp  bits.hpp  blend_mode.hpp  clipboard.hpp  cpu_info.hpp  cpu_information.hpp  cursor.hpp  display.hpp  display_mode.hpp  error.hpp  event.hpp  event_pipeline.hpp  events.hpp  filesystem.hpp  game_controller.hpp  game_controller_button.hpp  gesture.hpp  hints.hpp  image.hpp  joystick.hpp  joystick_instance_id.hpp  key.hpp  keyboard.hpp  keycode.hpp  loadso.hpp  log.hpp  message_box.hpp  mouse.hpp  mouse_button_state.hpp  mouse_wheel_direction.hpp  pixels.hpp  platform.hpp  power.hpp  rect.hpp  rectangle.hpp  relative_mouse_mode.hpp  render.hpp  render_driver.hpp  (+21 more)
include/sdlw/audio/: device_id.hpp
include/sdlw/events/: event.hpp  event_pipeline.hpp  pipeline.hpp
include/sdlw/events/game_controller/: axis.hpp  button.hpp
include/sdlw/events/gesture/: id.hpp
include/sdlw/events/joystick/: hat_position.hpp  instance_id.hpp
include/sdlw/events/keyboard/: key.hpp  keyboard.hpp  keycode.hpp  keymod.hpp  scancode.hpp  screen_keyboard.hpp  text_input.hpp
include/sdlw/events/mouse/: active_cursor.hpp  button.hpp  button_state.hpp  cursor.hpp  mouse.hpp  mouse_button.hpp  mouse_button_state.hpp  relative_mode.hpp  relative_mouse_mode.hpp  wheel_direction.hpp
include/sdlw/events/touch/: device_id.hpp  finger.hpp  touch.hpp  touch_finger.hpp
include/sdlw/img/: image.hpp  subsystem.hpp
include/sdlw/power/: power.hpp
include/sdlw/time/: time.hpp
include/sdlw/ttf/: font.hpp  font_loading.hpp  subsystem.hpp  text_rendering.hpp
include/sdlw/video/: blend_mode.hpp  color.hpp  driver.hpp  message_box.hpp  point.hpp  rectangle.hpp  render_driver.hpp  renderer.hpp  renderer_and_texture.hpp  screen_saver.hpp  size.hpp  subsystem.hpp  surface.hpp  texture.hpp  window.hpp  window_and_renderer.hpp
include/sdlw/video/display/: display.hpp  display_mode.hpp  mode.hpp
include/sdlw/video/pixels/: pixel_format_type.hpp
scripts/: run.py
